--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   [<a href="https://github.com/kevinrsx">GitHub</a>]
   [<a href="https://www.linkedin.com/in/kaiwen-xue-498220220/">LinkedIn</a>]
   [<a href="https://twitter.com/kevinkwxue">Twitter</a>]
-  [<a href="./name.html">About My Preferred Name</a>]
+  [<a href="./name.html">On My Preferred Name</a>]
 
 <fieldset>
   <legend><strong>ABOUT</strong></legend>
