--- a/name.html
+++ b/name.html
@@ -32,13 +32,13 @@ translation of people whose English names are Kevin (NBA player Kevin Durant's
 Chinese translation can be romanized as Kaiwen Dulante, for example). Kaiwen and
 Kevin are therefore essentially the same thing, but the latter makes much more
 sense in the English world. Therefore, I wish to be referred to as Kevin as
-often as possible, though one is always free to address me by anything.
+often as possible, while one is always free to address me by anything.
   </p>
 
   <p>
 Indeed, when my mom conceived, she and my dad decided that my English name
 would be <span style="font-family: monospace;">
-(is_boy ? "Kevin" : "Kerry")</span>. Not the coolest those names are, I believe 
+(is_boy ? "Kevin" : "Kerry")</span>. Not the coolest names those are, I believe 
 asking English-speaking people to call me Kevin is one way, though insufficient,
 to thank them for supporting my education abroad over the years.
   </p>
