--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 <p>
   [<a href="https://github.com/kevinrsx">GitHub</a>]
   [<a href="https://www.linkedin.com/in/kaiwen-xue-498220220/">LinkedIn</a>]
-  [<a href="https://twitter.com/kevinkwxue">Twitter</a>]
   [<a href="./name.html">On My Preferred Name</a>]
 
 <fieldset>
@@ -28,10 +27,9 @@ I am a
 Master of Science in Computer Science</a> student at
 <a href="https://www.cmu.edu/">Carnegie Mellon University</a>. I am a member of
 <a href="https://www.cs.cmu.edu/~caos">The CAOS Group</a> led by Professor
-<a href="https://www.cs.cmu.edu/~dskarlat/">Dimitrios Skarlatos</a>. Based in
-the San Francisco Bay Area in the summer of 2023, I am
-working at <a href="https://www.rivosinc.com/">Rivos</a>
-as a member of technical staff (software) intern.
+<a href="https://www.cs.cmu.edu/~dskarlat/">Dimitrios Skarlatos</a>.
+In summer 2023, I worked at <a href="https://www.rivosinc.com/">Rivos</a>
+as a member of technical staff (software) intern in Mountain View, California.
   </p>
 
   <p class="wrap">
@@ -39,9 +37,20 @@ I like anything related to computer systems, among which operating systems are
 my favorite. Projects I have worked on until now include
 <a href="http://www.cs.cmu.edu/~dskarlat/publications/contiguitas_isca23.pdf">
 memory defragmentation in data centers</a>
-and the hypervisor of a confidential virtual machine. A more formal listing of
-my experience can be found in my
-<a href="./static/cv-202306-full.pdf">Curriculum Vitae</a>.
+and the hypervisor of a confidential virtual machine.
+I am also in the process of upstreaming my contributions to open source projects
+that construct today's major system software, including
+<a href="https://github.com/riscv-software-src/opensbi">OpenSBI</a>
+(<a href="https://patchwork.ozlabs.org/project/opensbi/list/?series=&submitter=86853&state=*">patches</a>),
+<a href="https://www.qemu.org/">QEMU</a>
+(<a href="https://patchwork.kernel.org/project/qemu-devel/list/?submitter=210200&state=*">patches</a>),
+and
+<a href="https://www.kernel.org/">Linux</a>
+(patches available soon).
+A more formal listing of my experience can be found in my
+<a href="./static/cv-202308-full.pdf">Curriculum Vitae</a>
+or my one-page
+<a href="./static/cv-202308-1p.pdf">Resume</a>.
   </p>
 
   <p class="wrap">
@@ -53,12 +62,11 @@ made possible by the
 One of the best memories of my college life was TA'ing the
 <a href="https://cs4118.github.io/">Operating Systems class</a> two times
 with an amazing team in the senior year. The course is composed of advanced UNIX
-programming, OS theory, and
-<a href="https://www.kernel.org/">Linux kernel</a> hacking.
+programming, OS theory, and Linux kernel hacking.
   </p>
 </fieldset>
 
-<p><em>Last updated: 2023-06-22.</em></p>
+<p><em>Last updated: 2023-08-15.</em></p>
 
 </body>
 
