--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <p>
   [<a href="https://github.com/kevinrsx">GitHub</a>]
   [<a href="https://www.linkedin.com/in/kaiwen-xue-498220220/">LinkedIn</a>]
-  [<a href="./name.html">On My Preferred Name</a>]
+  [<a href="./name.html">Preferred Name</a>]
 
 <fieldset>
   <legend><strong>ABOUT</strong></legend>
@@ -24,30 +24,21 @@
   <p class="wrap">
 I am a
 <a href="https://csd.cmu.edu/sites/default/files/mscs-handbook-2022-2023.pdf">
-Master of Science in Computer Science</a> student at
+Master of Science in Computer Science (MSCS) </a> student at
 <a href="https://www.cmu.edu/">Carnegie Mellon University</a>. I am a member of
 <a href="https://www.cs.cmu.edu/~caos">The CAOS Group</a> led by Professor
 <a href="https://www.cs.cmu.edu/~dskarlat/">Dimitrios Skarlatos</a>.
-In summer 2023, I worked at <a href="https://www.rivosinc.com/">Rivos</a>
+In summer 2023, I worked at <a href="https://www.rivosinc.com/">Rivos Inc.</a>
 as a member of technical staff (software) intern in Mountain View, California.
   </p>
 
   <p class="wrap">
 I like anything related to computer systems, among which operating systems are
-my favorite. Projects I have worked on until now include
-<a href="http://www.cs.cmu.edu/~dskarlat/publications/contiguitas_isca23.pdf">
-memory defragmentation in data centers</a>
-and the hypervisor of a confidential virtual machine.
+my favorite. Projects I have worked on include memory defragmentation
+in data centers and the hypervisor of a confidential virtual machine.
 I am also in the process of upstreaming my contributions to open source projects
-that construct today's major system software, including
-<a href="https://github.com/riscv-software-src/opensbi">OpenSBI</a>
-(<a href="https://patchwork.ozlabs.org/project/opensbi/list/?series=&submitter=86853&state=*">patches</a>),
-<a href="https://www.qemu.org/">QEMU</a>
-(<a href="https://patchwork.kernel.org/project/qemu-devel/list/?submitter=210200&state=*">patches</a>),
-and
-<a href="https://www.kernel.org/">Linux</a>
-(patches available soon).
-A more formal listing of my experience can be found in my
+that construct today's major system software, including OpenSBI, QEMU, and the
+Linux kernel. A more formal listing of my experience can be found in my
 <a href="./static/cv-202308-full.pdf">Curriculum Vitae</a>
 or my one-page
 <a href="./static/cv-202308-1p.pdf">Resume</a>.
@@ -59,14 +50,27 @@ I have two undergraduate alma maters,
 <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a>,
 made possible by the
 <a href="https://cityu-hk.gs.columbia.edu/">joint degree program</a>.
-One of the best memories of my college life was TA'ing the
-<a href="https://cs4118.github.io/">Operating Systems class</a> two times
-with an amazing team in the senior year. The course is composed of advanced UNIX
-programming, OS theory, and Linux kernel hacking.
+One of the best memories of my college life was TA'ing  
+<a href="https://cs4118.github.io/">COMS W4118, Operating Systems I</a> twice
+with an amazing team in the senior year.
   </p>
 </fieldset>
 
-<p><em>Last updated: 2023-08-15.</em></p>
+<fieldset>
+  <legend><strong>PUBLICATIONS</strong></legend>
+  <ul>
+    <li><a href="./publications/contiguitas_isca23.pdf">
+"Contiguitas: The Pursuit of Physical Memory Contiguity in Datacenters,"
+    </a></br>
+    Kaiyang Zhao, <strong>Kaiwen Xue</strong>, Ziqi Wang, Dan Schatzberg, Leon
+    Yang, Antonis Manousis, Johannes Weiner, Rik van Riel, Bikash Sharma,
+    Chunqiang Tang, and Dimitrios Skarlatos, <em>Proceedings of the 50th Annual
+    International Symposium on Computer Architecture (ISCA 2023)</em>, Orlando,
+    FL, June 2023. (Best Paper Award)</li>
+  </ul>
+</fieldset>
+
+<!-- <p><em>Last updated: 2023-08-15.</em></p> -->
 
 </body>
 
