--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ I have two undergraduate alma maters,
 made possible by the
 <a href="https://cityu-hk.gs.columbia.edu/">joint degree program</a>.
 One of the best memories of my college life was TA'ing  
-<a href="https://cs4118.github.io/">COMS W4118, Operating Systems I</a> twice
+<a href="https://cs4118.github.io/">COMS W4118: Operating Systems I</a> twice
 with an amazing team in the senior year.
   </p>
 </fieldset>
