--- a/index.html
+++ b/index.html
@@ -37,11 +37,9 @@ I like anything related to computer systems, among which operating systems are
 my favorite. Projects I have worked on include memory defragmentation
 in data centers and the hypervisor of a confidential virtual machine.
 I am also in the process of upstreaming my contributions to open source projects
-that construct today's major system software, including OpenSBI, QEMU, and the
-Linux kernel. A more formal listing of my experience can be found in my
-<a href="./static/cv-202308-full.pdf">Curriculum Vitae</a>
-or my one-page
-<a href="./static/cv-202308-1p.pdf">Resume</a>.
+including OpenSBI, QEMU, and the Linux kernel. A more formal listing of my
+experience can be found inthe 
+<a href="./static/cv-202311-full.pdf">Curriculum Vitae</a>.
   </p>
 
   <p class="wrap">
