--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <p>MSCS @ CMU (He/him) </p>
 <p>Email: <a href="mailto:kaiwenx@andrew.cmu.edu">kaiwenx@andrew.cmu.edu</a></p>
 <p>
+  [<a href="./static/cv-202311-full.pdf">CV</a>]
   [<a href="https://github.com/kevinrsx">GitHub</a>]
   [<a href="https://www.linkedin.com/in/kaiwen-xue-498220220/">LinkedIn</a>]
   [<a href="./name.html">Preferred Name</a>]
@@ -26,20 +27,25 @@ I am a
 <a href="https://csd.cmu.edu/sites/default/files/mscs-handbook-2022-2023.pdf">
 Master of Science in Computer Science (MSCS) </a> student at
 <a href="https://www.cmu.edu/">Carnegie Mellon University</a>. I am a member of
-<a href="https://www.cs.cmu.edu/~caos">The CAOS Group</a> led by Professor
-<a href="https://www.cs.cmu.edu/~dskarlat/">Dimitrios Skarlatos</a>.
-In summer 2023, I worked at <a href="https://www.rivosinc.com/">Rivos Inc.</a>
-as a member of technical staff (software) intern in Mountain View, California.
+<a href="https://www.cs.cmu.edu/~caos">The CAOS Group</a> led by
+<a href="https://www.cs.cmu.edu/~dskarlat/">Prof. Dimitrios Skarlatos</a>.
   </p>
 
   <p class="wrap">
-I like anything related to computer systems, among which operating systems are
-my favorite. Projects I have worked on include memory defragmentation
-in data centers and the hypervisor of a confidential virtual machine.
-I am also in the process of upstreaming my contributions to open source projects
-including OpenSBI, QEMU, and the Linux kernel. A more formal listing of my
-experience can be found in the 
-<a href="./static/cv-202311-full.pdf">Curriculum Vitae</a>.
+My interests lie in computer systems and architecture. Projects I have worked on
+include
+<a href="https://www.cs.cmu.edu/news/2023/contiguitas-memory-management">
+memory defragmentation in data centers</a> and extending the features of
+<a href="https://github.com/VeriGu/SeKVM-4.18">
+the hypervisor of a confidential virtual machine</a>.
+I enjoy improving open source projects for system software and architectural
+simulation. My contribution to QEMU, OpenSBI, and the Linux kernel are in
+the process of being upstreamed.
+  </p>
+
+  <p class="wrap">
+In summer 2023, I worked at <a href="https://www.rivosinc.com/">Rivos Inc.</a>
+as a member of technical staff (software) intern in Mountain View, California.
   </p>
 
   <p class="wrap">
@@ -60,11 +66,11 @@ with an amazing team in the senior year.
     <li><a href="./publications/contiguitas_isca23.pdf">
 "Contiguitas: The Pursuit of Physical Memory Contiguity in Datacenters,"
     </a></br>
-    Kaiyang Zhao, <strong>Kaiwen Xue</strong>, Ziqi Wang, Dan Schatzberg, Leon
-    Yang, Antonis Manousis, Johannes Weiner, Rik van Riel, Bikash Sharma,
-    Chunqiang Tang, and Dimitrios Skarlatos, <em>Proceedings of the 50th Annual
-    International Symposium on Computer Architecture (ISCA 2023)</em>, Orlando,
-    FL, June 2023. (Best Paper Award)</li>
+Kaiyang Zhao, <strong>Kaiwen Xue</strong>, Ziqi Wang, Dan Schatzberg, Leon
+Yang, Antonis Manousis, Johannes Weiner, Rik van Riel, Bikash Sharma,
+Chunqiang Tang, and Dimitrios Skarlatos, <em>Proceedings of the 50th Annual
+International Symposium on Computer Architecture (ISCA 2023)</em>, Orlando,
+FL, June 2023. (Best Paper Award)</li>
   </ul>
 </fieldset>
 
