--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <link rel="stylesheet" href="style.css">
   <title>Kevin Xue's Home Page</title>
+  <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -11,70 +12,61 @@
   Kaiwen Xue, Kevin
 </a></h1>
 
-<p>MSCS @ CMU (He/him) </p>
-<p>Email: <a href="mailto:kaiwenx@andrew.cmu.edu">kaiwenx@andrew.cmu.edu</a></p>
+<p>Ex MSCS @ CMU (He/him) </p>
+<p>Email: <a href="mailto:kaiwenx@andrew.cmu.edu">kaiwenx@andrew.cmu.edu</a>
+(Please use this to send calendar invites.)</p>
 <p>
-  [<a href="./static/cv-202311-full.pdf">CV</a>]
+  [<a href="./static/cv_202311_full.pdf">CV</a>]
   [<a href="https://github.com/kevinrsx">GitHub</a>]
   [<a href="https://www.linkedin.com/in/kaiwen-xue-498220220/">LinkedIn</a>]
-  [<a href="./name.html">Preferred Name</a>]
+
 
 <fieldset>
   <legend><strong>ABOUT</strong></legend>
-  <p><img id="portrait" src="./static/portrait-202306-soobeen-park.png"></p>
-  <p class="wrap">
-I am a
-<a href="https://csd.cmu.edu/sites/default/files/mscs-handbook-2022-2023.pdf">
-Master of Science in Computer Science (MSCS) </a> student at
-<a href="https://www.cmu.edu/">Carnegie Mellon University</a>. I am a member of
-<a href="https://www.cs.cmu.edu/~caos">The CAOS Group</a> led by
-<a href="https://www.cs.cmu.edu/~dskarlat/">Prof. Dimitrios Skarlatos</a>.
+  <p><img id="portrait" src="./static/portrait_202306_soobeen_park.png"></p>
+  <p>
+My preferred name is Kevin.
   </p>
 
-  <p class="wrap">
-My interests lie in computer systems and architecture. Projects I have worked on
-include
-<a href="https://www.cs.cmu.edu/news/2023/contiguitas-memory-management">
-memory defragmentation in data centers</a> and extending the features of
-<a href="https://github.com/VeriGu/SeKVM-4.18">
-the hypervisor of a confidential virtual machine</a>.
-I enjoy improving open source projects for system software and architectural
-simulation. My contribution to QEMU, OpenSBI, and the Linux kernel are in
-the process of being upstreamed.
+  <p>
+I <s>am</s> was a(n) Master of Science in Computer Science (MSCS) student at
+<a href="https://www.cmu.edu/">Carnegie Mellon University</a>. I currently work
+with <a href="https://www.cs.cmu.edu/~dskarlat/">Prof. Dimitrios Skarlatos</a>.
+I am interested in operating systems and computer architecture.
   </p>
 
-  <p class="wrap">
+  <p>
 In summer 2023, I worked at <a href="https://www.rivosinc.com/">Rivos Inc.</a>
 as a member of technical staff (software) intern in Mountain View, California.
   </p>
 
-  <p class="wrap">
+  <p>
 I have two undergraduate alma maters,
 <a href="https://www.columbia.edu/">Columbia University</a> and
 <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a>,
 made possible by the
 <a href="https://cityu-hk.gs.columbia.edu/">joint degree program</a>.
-One of the best memories of my college life was TA'ing  
+<!-- One of the best memories of my college life was TA'ing  
 <a href="https://cs4118.github.io/">COMS W4118: Operating Systems I</a> twice
-with an amazing team in the senior year.
+with an amazing team in the senior year. -->
   </p>
 </fieldset>
 
 <fieldset>
   <legend><strong>PUBLICATIONS</strong></legend>
-  <ul>
+  <ol>
     <li><a href="./publications/contiguitas_isca23.pdf">
-"Contiguitas: The Pursuit of Physical Memory Contiguity in Datacenters,"
+Contiguitas: The Pursuit of Physical Memory Contiguity in Datacenters
     </a></br>
-Kaiyang Zhao, <strong>Kaiwen Xue</strong>, Ziqi Wang, Dan Schatzberg, Leon
+Kaiyang Zhao, <u>Kaiwen Xue</u>, Ziqi Wang, Dan Schatzberg, Leon
 Yang, Antonis Manousis, Johannes Weiner, Rik van Riel, Bikash Sharma,
 Chunqiang Tang, and Dimitrios Skarlatos, <em>Proceedings of the 50th Annual
 International Symposium on Computer Architecture (ISCA 2023)</em>, Orlando,
-FL, June 2023. (Best Paper Award)</li>
-  </ul>
+FL, June 2023. <strong>Best Paper Award</strong>.</li>
+  </ol>
 </fieldset>
 
-<!-- <p><em>Last updated: 2023-08-15.</em></p> -->
+<p><em>This page last updated: Jan 30, 2024.</em></p>
 
 </body>
 
