--- a/index.html
+++ b/index.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <link rel="stylesheet" href="style.css">
-  <title>Kevin Xue's Home Page</title>
-  <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
-</head>
-
-<body>
+---
+layout: home
+---
 
 <h1><a href="https://kevinrsx.github.io" id="kaiwen-xue">
   Kaiwen Xue, Kevin
@@ -67,7 +61,3 @@ FL, June 2023. <strong>Best Paper Award</strong>.</li>
 </fieldset>
 
 <p><em>This page last updated: Jan 30, 2024.</em></p>
-
-</body>
-
-</html> 
