--- a/index.html
+++ b/index.html
@@ -2,47 +2,46 @@
 layout: home
 ---
 
-<h1><a href="https://kevinrsx.github.io" id="kaiwen-xue">
+<h1><a href="https://kevinrsx.github.io" id="nogizaka-purple">
   Kaiwen Xue, Kevin
 </a></h1>
 
-<p>Ex MSCS @ CMU (He/him) </p>
-<p>Email: <a href="mailto:kaiwenx@andrew.cmu.edu">kaiwenx@andrew.cmu.edu</a>
-(Please use this to send calendar invites.)</p>
+<div id="meta">
+<p><img id="portrait" src="./static/portrait_202408_ikebukuro.jpeg"></p>
+<p> Ph.D. Student
+  </br><a href="https://cse.engin.umich.edu/">Computer Science and Engineering Division</a>
+  </br><a href="https://umich.edu/">University of Michigan</a></p>
+<p>Email: <a href="mailto:kaiwenx@umich.edu">kaiwenx@umich.edu</a></p>
 <p>
-  [<a href="./static/cv_202311_full.pdf">CV</a>]
   [<a href="https://github.com/kevinrsx">GitHub</a>]
   [<a href="https://www.linkedin.com/in/kaiwen-xue-498220220/">LinkedIn</a>]
-
+</div>
 
 <fieldset>
   <legend><strong>ABOUT</strong></legend>
-  <p><img id="portrait" src="./static/portrait_202306_soobeen_park.png"></p>
   <p>
 My preferred name is Kevin.
   </p>
-
   <p>
-I <s>am</s> was a(n) Master of Science in Computer Science (MSCS) student at
-<a href="https://www.cmu.edu/">Carnegie Mellon University</a>. I currently work
-with <a href="https://www.cs.cmu.edu/~dskarlat/">Prof. Dimitrios Skarlatos</a>.
-I am interested in operating systems and computer architecture.
+I am a Ph.D. student at the
+<a href="https://cse.engin.umich.edu/">Computer Science and Engineering Division</a> of
+<a href="https://umich.edu/">University of Michigan</a>, advised by Professors
+<a href="https://www.mosharaf.com/">Mosharaf Chowdhury</a>
+and <a href="https://web.eecs.umich.edu/~ryanph/">Ryan Huang</a>.
+I am interested in building scalable computer systems.
   </p>
-
   <p>
-In summer 2023, I worked at <a href="https://www.rivosinc.com/">Rivos Inc.</a>
-as a member of technical staff (software) intern in Mountain View, California.
-  </p>
-
-  <p>
-I have two undergraduate alma maters,
+Before starting the Ph.D. program, I had worked with Professors
+<a href="https://www.cs.cmu.edu/~dskarlat/">Dimitrios Skarlatos</a>,
+<a href="https://shihweili.com/">Shih-Wei Li</a>,
+<a href="https://www.cs.columbia.edu/~nieh/">Jason Nieh</a>, and
+<a href="https://henryhxu.github.io/">Hong Xu</a>.
+I obtained a Master's degree from
+<a href="https://www.cmu.edu/">Carnegie Mellon University</a>
+and a <a href="">dual Bachelor's degree</a> from
 <a href="https://www.columbia.edu/">Columbia University</a> and
 <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a>,
-made possible by the
-<a href="https://cityu-hk.gs.columbia.edu/">joint degree program</a>.
-<!-- One of the best memories of my college life was TA'ing  
-<a href="https://cs4118.github.io/">COMS W4118: Operating Systems I</a> twice
-with an amazing team in the senior year. -->
+all in computer science. 
   </p>
 </fieldset>
 
@@ -56,8 +55,10 @@ Kaiyang Zhao, <u>Kaiwen Xue</u>, Ziqi Wang, Dan Schatzberg, Leon
 Yang, Antonis Manousis, Johannes Weiner, Rik van Riel, Bikash Sharma,
 Chunqiang Tang, and Dimitrios Skarlatos, <em>Proceedings of the 50th Annual
 International Symposium on Computer Architecture (ISCA 2023)</em>, Orlando,
-FL, June 2023. <strong>Best Paper Award</strong>.</li>
+FL, June 2023.</br>
+  <div id="nogizaka-purple">Honors: ISCA '23 Best Paper Award; IEEE Micro Top Pick Selection</div>
+  </li>
   </ol>
 </fieldset>
 
-<p><em>This page last updated: Jan 30, 2024.</em></p>
+<p><em>This page last updated: August 28, 2024.</em></p>
