--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@ and <a href="https://web.eecs.umich.edu/~ryanph/">Ryan Huang</a>.
 I am interested in building scalable computer systems.
   </p>
   <p>
-Before starting the Ph.D. program, I had worked with Professors
+I had worked with Professors
 <a href="https://www.cs.cmu.edu/~dskarlat/">Dimitrios Skarlatos</a>,
 <a href="https://shihweili.com/">Shih-Wei Li</a>,
 <a href="https://www.cs.columbia.edu/~nieh/">Jason Nieh</a>, and
-<a href="https://henryhxu.github.io/">Hong Xu</a>.
-I obtained a Master's degree from
+<a href="https://henryhxu.github.io/">Hong Xu</a>
+before obtaining a Master's degree from
 <a href="https://www.cmu.edu/">Carnegie Mellon University</a>
-and a <a href="">dual Bachelor's degree</a> from
-<a href="https://www.columbia.edu/">Columbia University</a> and
+and a <a href="https://cityu-hk.gs.columbia.edu/">joint Bachelor's degree</a>
+from <a href="https://www.columbia.edu/">Columbia University</a> and
 <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a>,
-all in computer science. 
+both in computer science. 
   </p>
 </fieldset>
 
@@ -61,4 +61,4 @@ FL, June 2023.</br>
   </ol>
 </fieldset>
 
-<p><em>This page last updated: August 28, 2024.</em></p>
+<p><em>This page last updated: {{ page.last_modified_at | date: '%B %d, %Y'}}</em></p>
