Update some papers

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ layout: home
   </br><a href="https://cse.engin.umich.edu/">Computer Science and Engineering Division</a>
   </br><a href="https://umich.edu/">University of Michigan</a></p>
 <p>Email: <a href="mailto:kaiwenx@umich.edu">kaiwenx@umich.edu</a></p>
+<p>ORCID: <a href="https://orcid.org/0009-0002-5311-2826">0009-0002-5311-2826</a></p>
 <p>
   [<a href="https://github.com/kevinrsx">GitHub</a>]
   [<a href="https://www.linkedin.com/in/kaiwen-xue-498220220/">LinkedIn</a>]
@@ -28,7 +29,8 @@ I am a Ph.D. student at the
 <a href="https://umich.edu/">University of Michigan</a>, advised by Professors
 <a href="https://www.mosharaf.com/">Mosharaf Chowdhury</a>
 and <a href="https://web.eecs.umich.edu/~ryanph/">Ryan Huang</a>.
-I am interested in building scalable computer systems.
+I'm interested in computer systems. My current research focus is efficient and
+fair application scheduling on personal devices.
   </p>
   <p>
 I had worked with Professors
@@ -48,6 +50,15 @@ both in computer science.
 <fieldset>
   <legend><strong>PUBLICATIONS</strong></legend>
   <ol>
+    <li><a href="https://dl.acm.org/doi/10.1145/3678015.3680488">
+Designing and Implementing Live Migration Support for Arm-based Confidential VMs
+    </a></br>
+Fang-Jie Yang, Jian-Lin Li, <u>Kaiwen Xue</u>, Shih-Wei Li, <em>Proceedings of the 15th
+ACM SIGOPS Asia-Pacific Workshop on Systems
+(APSys 2024)</em>, Kyoto, Japan, September 2024.</br>
+    </li>
+    </br>
+
     <li><a href="./publications/contiguitas_isca23.pdf">
 Contiguitas: The Pursuit of Physical Memory Contiguity in Datacenters
     </a></br>
@@ -56,9 +67,17 @@ Yang, Antonis Manousis, Johannes Weiner, Rik van Riel, Bikash Sharma,
 Chunqiang Tang, and Dimitrios Skarlatos, <em>Proceedings of the 50th Annual
 International Symposium on Computer Architecture (ISCA 2023)</em>, Orlando,
 FL, June 2023.</br>
-  <div id="nogizaka-purple">Honors: ISCA '23 Best Paper Award; IEEE Micro Top Pick Selection</div>
-  </li>
+    <div id="nogizaka-purple">Honors: ISCA '23 Best Paper Award; IEEE Micro Top Pick Selection</div>
+    </li>
+    </br>
+
+    <li><a href="https://dl.acm.org/doi/10.1016/j.comnet.2023.109918">
+Efficient Real-time Video Conferencing with Adaptive Frame Delivery
+    </a></br>
+Libin Liu, Jingzong Li, HX, <u>Kaiwen Xue</u>, Chun Jason Xue, <em>Elsevier Computer
+Networks</em>, 2023.
+    </li>
   </ol>
 </fieldset>
 
-<p><em>This page last updated: {{ page.last_modified_at | date: '%B %d, %Y'}}</em></p>
+<!-- <p><em>This page last updated: {{ page.last_modified_at | date: '%B %d, %Y'}}</em></p> -->
